--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "test": "ts-node --loader ts-node/esm navmesh_test.ts"
     },
     "dependencies": {
+        "earcut": "^3.0.2",
         "polygon-clipping": "^0.15.7"
     },
     "devDependencies": {
