--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
     "compilerOptions": {
         "target": "ES2020",
-        "module": "ESNext",
+        "module": "CommonJS",
         "moduleResolution": "Node",
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
+        "declaration": true,
+        "outDir": "dist",
         "strict": true,
-        "skipLibCheck": true,
-        "outDir": "dist"
+        "esModuleInterop": true,
+        "skipLibCheck": true
     },
     "include": [
-        "*.ts"
+        "src/**/*.ts",
+        "earcut.d.ts"
     ]
 }
