--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "poly-math-2d",
-    "version": "0.1.0",
-    "description": "2D Polygon math: булевы операции, триангуляция, графы, поддержка дырок и невыпуклых фигур.",
+    "version": "0.1.1",
+    "description": "2D Polygon math: boolean operations, triangulation, graphs, support for holes and non-convex shapes.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
